--- a/fitaai/pubspec.yaml
+++ b/fitaai/pubspec.yaml
@@ -38,12 +38,13 @@ dependencies:
   # Supabase Flutter SDK
   supabase_flutter: ^2.3.4
   image_picker: ^1.1.2
-  http: ^1.2.0
+  http: ^1.3.0
   uuid: ^4.5.1
   google_generative_ai: ^0.3.3
   fl_chart: ^0.70.2
   syncfusion_flutter_charts: ^29.1.33
   numberpicker: ^2.1.2
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
